--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <html>
  <head>
    <title> Christmas Around the World</title>
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
