--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
   <header>
     <img src="https://images.8tracks.com/cover/i/012/772/967/a-world-3985.jpg?rect=88,0,464,464&q=98&fm=jpg&fit=max"> 
     <main>
+     <nav>
       <ul>
         <li><a href="#About Us">About Us</a></li>
         <li><a href="#Topic">Topic</a></li>
@@ -21,6 +22,7 @@
         <li><a href="#Contact Us">Contact Us</a></li>
         
         </ul>
+       </nav)
     </main>
     </header>
   <main>
@@ -92,8 +94,8 @@
 
   <p> <img src="url photo" /></p>
   <p>Source provided by <a href="url" target="_blank">name</a></p>
-<footer> Copyright of Group 3 2021 through the Year Up Program 
-
+<footer> 
+   &copy; 2021 Group 3 through year up program
 </footer>
   </body>
 </html> 
