added my contact info

--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
   <div class="add CSS attribute file name here"> 
   <h5>Contact Us</h5>
   <img src="https://cdn.fodors.com/ee/files/slideshows/11092/ozark-mountain-christmas-2.jpg"> 
-  <p>Add your contact information</p>
+  <ul>
+    <li>Tom Ho, t.vho1302@gmail.com,</li> <a href="https://www.linkedin.com/in/t-v-ho/">LinkedIn</a>
+  </ul>
+  
  </div>  
  </section>
 
