--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
   <img src="https://cdn.fodors.com/ee/files/slideshows/11092/ozark-mountain-christmas-2.jpg"> 
   <ul>
     <li>Tom Ho, t.vho1302@gmail.com,</li> <a href="https://www.linkedin.com/in/t-v-ho/">LinkedIn</a>
-  </ul>
+   <li>Justin Truong,justin.truongt@yahoo.com,</li> < a herf="https://www.linkedin.com/in/justin-truong-231080155/">LinkedIn</a>
+   <li>Helen Fessahaie, hfessahaie@sea.yearup.org,</li> <a herf="https://www.linkedin.com/in/helenflinked/">LinkedIn</a>
+   <li>Eyerusalem Shiferaw,eyab35@gmail.com,</li> <a herf="https://www.linkedin.com/in/eyerusalem-shiferaw-6236521ab/">LinkedIn</a>
+  </ul> 
   
  </div>  
  </section>
