--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="About Us">
      
 <h1>ABOUT US</h1>
-<p>This is Group 3 that consists of Eyerusalem, Helen, Tom, and Justin</p>
+<h3>This is Group 3 that consists of Eyerusalem, Helen, Tom, and Justin</h3>
 </section>
 <section id="Christmas Around the World"> 
   
@@ -122,6 +122,7 @@
 
   <h1>CONTACT US</h1>
   <img src="https://cdn.fodors.com/ee/files/slideshows/11092/ozark-mountain-christmas-2.jpg"> 
+ <h3>
   <ul>
     <li>Tom Ho, t.vho1302@gmail.com,</li> <a href="https://www.linkedin.com/in/t-v-ho/">LinkedIn</a>
     <li>Justin Truong, jtruong000@sea.yearup.org,</li> <a href="linkedin.com/in/justin-truong-231080155">LinkedIn</a>
@@ -129,7 +130,7 @@
     <li>Eyerusalem Shiferaw, eyab35@gmail.com,</li> <a href="https://www.linkedin.com/in/eyerusalem-shiferaw-6236521ab/">LinkedIn</a>
     </a>
   </ul>
-  
+  </h3> 
   
  </section>
 
