--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
  <h3>
   <ul>
     <li>Tom Ho, t.vho1302@gmail.com,</li> <a href="https://www.linkedin.com/in/t-v-ho/">LinkedIn</a>
-    <li>Justin Truong, jtruong000@sea.yearup.org,</li> <a href="linkedin.com/in/justin-truong-231080155">LinkedIn</a>
+    <li>Justin Truong, jtruong000@sea.yearup.org,</li> <a href="https://www.linkedin.com/in/justin-truong-2456701/">LinkedIn</a>
     <li>Helen Fessahaie, hfessahaie@sea.yearup.org,</li> <a href="https://www.linkedin.com/in/helenflinked/">LinkedIn</a>
     <li>Eyerusalem Shiferaw, eyab35@gmail.com,</li> <a href="https://www.linkedin.com/in/eyerusalem-shiferaw-6236521ab/">LinkedIn</a>
     
